--- a/modules/documents/client/views/document-manager-upload-modal.html
+++ b/modules/documents/client/views/document-manager-upload-modal.html
@@ -17,6 +17,8 @@
 <!--
 <div>
 	Busy?: {{uploadService.actions.busy}}<br>
+	Started?: {{uploadService.actions.started}}<br>
+	Completed?: {{uploadService.actions.completed}}<br>
 	Allow Upload: {{uploadService.actions.allowStart}}<br>
 	Allow Stop: {{uploadService.actions.allowStop}}<br>
 	Allow Reset: {{uploadService.actions.allowReset}}<br>
