--- a/modules/documents/client/views/document-manager-upload-modal.html
+++ b/modules/documents/client/views/document-manager-upload-modal.html
@@ -3,7 +3,7 @@
 	<button ng-disabled="uploadService.actions.busy" type="button" class="btn btn-default close" ng-click="uploadModal.cancel()">
 		<span aria-hidden="true">&times;</span>
 	</button>
-	<h3 class="modal-title">Upload Files</h3>
+	<h3 class="modal-title">{{uploadModal.title}}</h3>
 </div>
 
 <div class="modal-body">
