--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -32,7 +32,7 @@
 			<!-- FILE BROWSER LIST -->
 			<div class="fb-list">
 
-				<div class="column-header">
+				<div class="column-header" ng-if="uploadService.fileList != 0">
 					<div class="col name-col">
 						<span>Name</span>
 					</div>
@@ -41,19 +41,14 @@
 					</div>
 				</div>
 				
-				<ul>
-					<li ng-if="uploadService.fileList == 0">
-						<span class="cell-contents">							
-							<span class="col name-col">
-								No files added.
-							</span>
-						</span>
-					</li>
+				<ul ng-if="uploadService.fileList != 0">
 					<li ng-repeat="f in uploadService.fileList">
 						<span class="cell-contents">							
 							<span class="col name-col">
 								<span class="avatar">
-									<span class="fb-file glyphicon glyphicon-file"></span>
+									<span class="fb-error glyphicon glyphicon-ok" ng-if="f.progress == 100"></span>
+									<span class="fb-error glyphicon glyphicon-alert" ng-if="f.$error"></span>
+									<span class="fb-file glyphicon glyphicon-file" ng-if="f.progress != 100 && !f.$error"></span>
 								</span>
 								{{f.name}}
 							</span>
