--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -25,12 +25,12 @@
 				x-type="'project'"
 				title="Upload Files"><span class="glyphicon glyphicon-open"></span></button>
 
-			<button class="toggle-details-btn btn icon-btn" title="Show Details" ng-disabled="!documentMgr.selectedItem"
-					ng-click="fbToggleDetails()"><span class="glyphicon glyphicon-info-sign"></span></button>
+			<button class="toggle-details-btn btn icon-btn" title="Show Details" ng-disabled="!documentMgr.infoPanel.enabled"
+					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
 		</div>
 	</div>
 
-	<div id="fbBody" class="fb-body">
+	<div id="fbBody" class="fb-body" ng-class="{'panel-open': documentMgr.infoPanel.enabled && documentMgr.infoPanel.open}">
 
 		<div class="fb-list">
 
@@ -68,19 +68,18 @@
 					<ul>
 						<li ng-repeat="doc in documentMgr.currentDirs">
 							<span class="cell-contents" ng-class="{'selected': documentMgr.selectedDirIndex(doc) > -1}" 
-								ng-click="documentMgr.toggleDir(doc)"
 								ng-dblclick="documentMgr.selectNode(doc.model.id)">
-								<span class="col name-col">
+								<span class="col name-col" ng-click="documentMgr.toggleDir(doc)">
 									<span class="avatar">
 										<span class="fb-folder glyphicon glyphicon-folder-close"></span>
 									</span>
 									{{ doc.model.name }}
 								</span>
-								<span class="col file-size-col">---</span>
-								<!--span class="col ">---</span-->
-								<span class="col date-added-col">---</span>
-								<div class="row-actions">
-									<button class="btn icon-btn" ng-click="fbShowDetails()">
+								<span class="col file-size-col" ng-click="documentMgr.toggleDir(doc)">---</span>
+								<!--span class="col " ng-click="documentMgr.toggleDir(doc)">---</span-->
+								<span class="col date-added-col" ng-click="documentMgr.toggleDir(doc)">---</span>
+								<div class="row-actions" ng-hide="documentMgr.infoPanel.disabled('Directory', doc)">
+									<button class="btn icon-btn" ng-click="documentMgr.infoPanel.toggle()">
 										<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
 									</button>
 								</div>
@@ -89,18 +88,18 @@
 					</ul>
 					<ul>
 						<li ng-repeat="doc in documentMgr.currentFiles">
-							<span class="cell-contents" ng-class="{'selected': documentMgr.selectedFileIndex(doc) > -1}" ng-click="documentMgr.toggleFile(doc)" >
-								<span class="col name-col">
+							<span class="cell-contents" ng-class="{'selected': documentMgr.selectedFileIndex(doc) > -1}">
+								<span class="col name-col" ng-click="documentMgr.toggleFile(doc)">
 									<span class="avatar">
 										<span class="fb-file glyphicon glyphicon-file"></span>
 									</span>
 									{{ doc.internalOriginalName | removeExtension }}
 								</span>
-								<span class="col file-size-col">{{ doc.internalSize | bytes:2 }}</span>
-								<!--span class="col ">{{ doc.internalExt}}</span-->
-								<span class="col date-added-col">{{ doc.dateUpdated | date : format : timezone }}</span>
-								<div class="row-actions">
-									<button class="btn icon-btn" ng-click="fbShowDetails()">
+								<span class="col file-size-col" ng-click="documentMgr.toggleFile(doc)">{{ doc.internalSize | bytes:2 }}</span>
+								<!--span class="col " ng-click="documentMgr.toggleFile(doc)">{{ doc.internalExt}}</span-->
+								<span class="col date-added-col" ng-click="documentMgr.toggleFile(doc)">{{ doc.dateUpdated | date : format : timezone }}</span>
+								<div class="row-actions" ng-hide="documentMgr.infoPanel.disabled('File', doc)">
+									<button class="btn icon-btn" ng-click="documentMgr.infoPanel.toggle()">
 										<span class="glyphicon glyphicon glyphicon-option-vertical"></span>
 									</button>
 								</div>
@@ -123,12 +122,12 @@
 						</svg>
 					</div>
 				</div>
-				<div ng-if="documentMgr.selectedItem && documentMgr.selectedItem.type === 'File'">
+				<div ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'File'">
 					<div class="title-panel">
-						<button class="btn btn-default close" type="button" ng-click="fbHideDetails()">
+						<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h2>{{documentMgr.selectedItem.item.internalOriginalName | removeExtension }}</h2>
+						<h2>{{documentMgr.infoPanel.data.internalOriginalName | removeExtension }}</h2>
 						<!--
 						<h2>Fetching Details...</h2>
 						-->
@@ -142,21 +141,21 @@
 								<li>
 									<span class="name">Status</span>
 									<span class="value">
-										<span class="label label-success" ng-if="documentMgr.selectedItem.item.isPublished">Published</span>
-										<span class="label label-info" ng-if="!documentMgr.selectedItem.item.isPublished">Not Published</span>
+										<span class="label label-success" ng-if="documentMgr.infoPanel.data.isPublished">Published</span>
+										<span class="label label-info" ng-if="!documentMgr.infoPanel.data.isPublished">Not Published</span>
 									</span>
 								</li>
 								<li>
 									<span class="name">Last Modified</span>
-									<span class="value">{{ documentMgr.selectedItem.item.dateUpdated | date : format : timezone }}</span>
+									<span class="value">{{ documentMgr.infoPanel.data.dateUpdated | date : format : timezone }}</span>
 								</li>
 								<li>
 									<span class="name">Modified by</span>
-									<span class="value">{{ documentMgr.selectedItem.item.updatedBy.displayName }}</span>
+									<span class="value">{{ documentMgr.infoPanel.data.updatedBy.displayName }}</span>
 								</li>
 								<li>
 									<span class="name">File Size</span>
-									<span class="value">{{ documentMgr.selectedItem.item.internalSize | bytes:2 }}</span>
+									<span class="value">{{ documentMgr.infoPanel.data.internalSize | bytes:2 }}</span>
 								</li>
 							</ul>
 						</section>
@@ -182,12 +181,12 @@
 
 					</div>
 				</div>
-				<div ng-if="documentMgr.selectedItem && documentMgr.selectedItem.type === 'Folder'">
+				<div ng-if="documentMgr.infoPanel.data && documentMgr.infoPanel.type === 'Directory'">
 					<div class="title-panel">
-						<button class="btn btn-default close" type="button" ng-click="fbHideDetails()">
+						<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
 							<span aria-hidden="true">&times;</span>
 						</button>
-						<h2>{{documentMgr.selectedItem.item.model.name}}</h2>
+						<h2>{{documentMgr.infoPanel.data.name}}</h2>
 						<!--
 						<h2>Fetching Details...</h2>
 						-->
@@ -238,6 +237,15 @@
 							</ul>
 						</section>
 
+					</div>
+				</div>
+				<div ng-if="!documentMgr.infoPanel.data || documentMgr.infoPanel.type === 'None'">
+					<div class="title-panel">
+						<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
+							<span aria-hidden="true">&times;</span>
+						</button>
+						<h2>Nothing selected - no info</h2>
+					</div>
 					</div>
 				</div>
 			</div>
