--- a/modules/documents/client/views/document-manager-upload.html
+++ b/modules/documents/client/views/document-manager-upload.html
@@ -46,9 +46,10 @@
 						<span class="cell-contents">							
 							<span class="col name-col">
 								<span class="avatar">
-									<span class="fb-error glyphicon glyphicon-ok" ng-if="f.progress == 100"></span>
-									<span class="fb-error glyphicon glyphicon-alert" ng-if="f.$error"></span>
-									<span class="fb-file glyphicon glyphicon-file" ng-if="f.progress != 100 && !f.$error"></span>
+									<span class="fb-error glyphicon glyphicon-ok" ng-if="f.uploaded"></span>
+									<span class="fb-error glyphicon glyphicon-alert" ng-if="f.failed"></span>
+									<span class="fb-error glyphicon glyphicon-warning-sign" ng-if="f.cancelled"></span>
+									<span class="fb-file glyphicon glyphicon-file" ng-if="f.uploading"></span>
 								</span>
 								{{f.name}}
 							</span>
@@ -57,7 +58,7 @@
 									<div class="progress-msg">
 										<span ng-if="f.progress && f.progress < 100">{{f.progress}}% of </span> 
 										<span>{{f.size | bytes:2}}</span>
-										<span ng-if="f.progress == 100"> - Complete</span>
+										<span ng-if="f.progress == 100"> - {{f.status}}</span>
 									</div>
 									<div class="progress">
 										<div class="progress-bar" style="width:{{f.progress}}%" title="{{f.progress}}%" role="progressbar"></div>
