ESM-665 / MEM-160 - Documents UI Development
- Cleaned up some styling for columns / icons
- Added / revised column widths for uploader / documents browser (included type column)
- Fixed a issue with the metadata drawer and no selected items

--- a/modules/documents/client/views/documents.html
+++ b/modules/documents/client/views/documents.html
@@ -4,7 +4,7 @@
 	<!-- <tmpl-permissions-gear class="permission-btn" x-context="menu.project" x-object="menu.project" x-permissions=""></tmpl-permissions-gear> -->
 </div>
 
-<div class="view-body-container">
+<div class="view-body-container documents">
 	<tmpl-documents-browser class="anchor-section"
 		id="anchor-documents"
 		x-approvals="false"
