--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -164,10 +164,6 @@ $list-selected-border: 1px solid #4187c9;
     .file-batch-actions {
         @include flex(0 0 auto);
     }
-
-    .toggle-details-btn {
-        display: none;
-    }
 }
 
 @media only screen 
@@ -212,14 +208,6 @@ $list-selected-border: 1px solid #4187c9;
                     }
                 }
             }
-        }
-    }
-}
-
-@media (min-width: 1024px) {
-    .fb-header {
-        .toggle-details-btn {
-            display: inline-block;
         }
     }
 }
@@ -354,19 +342,21 @@ $list-selected-border: 1px solid #4187c9;
         @include flexbox();
         @include userselect(none);
         position: relative;
-        padding-top: 1rem;
-        padding-bottom: 1rem;
         border-bottom: $file-browser-row-border;
 
         .avatar {
-            top: 0.5rem;
             margin-right: 0.75rem;
             text-align: center;
+
+            .glyphicon {
+                margin-top: -0.2rem;
+                font-size: 1.8rem;
+                vertical-align: top;
+            }
         }
 
         .col {
-            padding-left: 0.5rem;
-            padding-right: 0.5rem;
+            padding: 1.25rem 0.5rem;
             white-space: nowrap;
             overflow: hidden;
             text-overflow: ellipsis;
@@ -423,20 +413,14 @@ $list-selected-border: 1px solid #4187c9;
     }
 
     .fb-folder {
-        top: 0.4rem;
-        font-size: 2.1rem;
         color: $fb-folder-color;
     }
 
     .fb-file {
-        top: 0.4rem;
-        font-size: 1.8rem;
         color: $fb-file-color;
     }
 
     .fb-error {
-        top: 0.4rem;
-        font-size: 1.8rem;
         color: $fb-error-color;
     }
 
@@ -468,33 +452,6 @@ $list-selected-border: 1px solid #4187c9;
                 right: 1rem;
             }
         }
-    }
-}
-
-/* COLUMNS */
-span.avatar {
-    @include flex(0 0 3rem);
-}
-
-.col.name-col {
-    @include flex(1 1 auto);
-}
-
-.col.date-added-col {
-    @include flex(0 0 25%);
-}
-
-.col.file-size-col{
-    @include flex(0 0 25%)
-}
-
-@media (min-width: 1200px) {
-    .col.date-added-col {
-        @include flex(0 0 30%)
-    }
-
-    .col.file-size-col{
-        @include flex(0 0 30%)
     }
 }
 
@@ -578,6 +535,41 @@ $fb-details-panel-width: 35rem;
     }
 }
 
+/* COLUMNS */
+span.avatar {
+    @include flex(0 0 3rem);
+}
+
+.col.name-col {
+    @include flex(1 1 auto);
+}
+
+.col.size-col{
+    @include flex(0 0 18%)
+}
+
+.col.type-col {
+    @include flex(0 0 13%)
+}
+
+.col.date-added-col {
+    @include flex(0 0 22%);
+}
+
+@media (min-width: 1200px) {
+    .col.size-col{
+        @include flex(0 0 20%)
+    }
+
+    .col.type-col{
+        @include flex(0 0 17%)
+    }
+    
+    .col.date-added-col {
+        @include flex(0 0 20%)
+    }
+}
+
 
 /* Need to set on the 'view-body-container' when the file browser is placed within this element. */
 .file-browser-container {
@@ -591,7 +583,6 @@ $fb-details-panel-width: 35rem;
         left: 1.5rem;
     }
 }
-
 
 /* File Upload */
 $fb-upload-target-height: 10rem;
