--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -25,7 +25,7 @@
 				x-type="'project'"
 				title="Upload Files"><span class="glyphicon glyphicon-open"></span></button>
 
-			<button class="toggle-details-btn btn icon-btn" title="Show Details" ng-disabled="!documentMgr.infoPanel.enabled"
+			<button class="toggle-details-btn btn icon-btn" title="Show Details" 
 					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
 		</div>
 	</div>
@@ -49,12 +49,12 @@
 					<span>Name</span>
 					<span class="sort-icon"></span>
 				</div>
-				<div class="col file-size-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
-					<span>File Size</span>
+				<div class="col size-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
+					<span>Size</span>
 				</div>
-				<!--div class="col " ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
-					<span>File Format</span>
-				</div-->
+				<div class="col type-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
+					<span>Type</span>
+				</div>
 				<div class="col date-added-col" ng-class="{'descending': documentMgr.sortedMode == 'Descending'}">
 					<span>Date Added</span>
 				</div>
@@ -76,8 +76,8 @@
 									</span>
 									{{ doc.model.name }}
 								</span>
-								<span class="col file-size-col">---</span>
-								<!--span class="col " ng-click="documentMgr.toggleDir(doc)">---</span-->
+								<span class="col size-col">---</span>
+								<span class="col type-col">---</span>
 								<span class="col date-added-col">---</span>
 								<div class="row-actions" ng-hide="documentMgr.infoPanel.disabled('Directory', doc)">
 									<!--
@@ -99,8 +99,8 @@
 									</span>
 									{{ doc.internalOriginalName | removeExtension }}
 								</span>
-								<span class="col file-size-col">{{ doc.internalSize | bytes:2 }}</span>
-								<!--span class="col " ng-click="documentMgr.toggleFile(doc)">{{ doc.internalExt}}</span-->
+								<span class="col size-col">{{ doc.internalSize | bytes:2 }}</span>
+								<span class="col type-col">{{ doc.internalExt}}</span>
 								<span class="col date-added-col">{{ doc.dateUpdated | date : format : timezone }}</span>
 								<div class="row-actions" ng-hide="documentMgr.infoPanel.disabled('File', doc)">
 									<!--
@@ -146,7 +146,7 @@
 								<span class="name">Status</span>
 								<span class="value">
 									<span class="label label-success" ng-if="documentMgr.infoPanel.data.isPublished">Published</span>
-									<span class="label label-info" ng-if="!documentMgr.infoPanel.data.isPublished">Not Published</span>
+									<span class="label label-default" ng-if="!documentMgr.infoPanel.data.isPublished">Not Published</span>
 								</span>
 							</li>
 							<li>
@@ -185,8 +185,10 @@
 					<button class="btn btn-default close" type="button" ng-click="documentMgr.infoPanel.close()">
 						<span aria-hidden="true">&times;</span>
 					</button>
-					<h2>Nothing selected - no info</h2>
+					<h2>{{project.name}}</h2>
 				</div>
+				<div class="scroll-container">
+					Select a file or folder to view details.
 				</div>
 			</div>
 		</div>
