MEM 160 / ESM-665 Documents UI Development
- Fixed an issue with rendering the file icon when upload is complete
- Added icon for image types to the documents browser
- Fixed some spacing issues w/ the mobile back button (breadcrumbs)

--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -98,7 +98,8 @@
 								ng-click="documentMgr.toggleFile(doc)">
 								<span class="col name-col">
 									<span class="avatar">
-										<span class="fb-file glyphicon glyphicon-file"></span>
+										<span class="fb-file glyphicon glyphicon-file" ng-if="doc.internalExt == 'pdf'"></span>
+										<span class="fb-file glyphicon glyphicon-picture" ng-if="doc.internalExt == 'png' && 'jpg' && 'jpeg'"></span>
 									</span>
 									{{ doc.internalOriginalName | removeExtension }}
 								</span>
