--- a/modules/documents/client/styles/file-browser.scss
+++ b/modules/documents/client/styles/file-browser.scss
@@ -188,21 +188,23 @@ $list-selected-border: 1px solid #4187c9;
 
             li:nth-last-child(2) {
                 position: relative;
-                margin-right: 0.25rem;
+                margin-right: 0;
 
                 :before {
                     position: absolute;
                     top: 0;
-                    left: 0;
-                    width: 3.2rem;
+                    left: -1px;
+                    width: 100%;
                     height: 3.4rem;
                     display: inline-block;
                     line-height: 3.4rem;
-                    font-size: 4.8rem;
+                    font-size: 5rem;
                     content: '‹'; 
                 }
 
-                .btn {
+                .icon-btn {
+                    min-width: 3rem;
+
                     span {
                         display: none;
                     }
@@ -476,7 +478,7 @@ $fb-details-panel-width: 35rem;
             @include flex(0 0 auto);
             position: relative;
             margin: 0 2rem;
-            padding-top: 2rem;
+            padding-top: 1.5rem;
             padding-bottom: 1.5rem;
             z-index: 3;
 
@@ -491,7 +493,7 @@ $fb-details-panel-width: 35rem;
 
             .close {
                 position: absolute;
-                top: 1.15rem;
+                top: 1rem;
                 right: 0;
                 width: 3.4rem;
                 height: 3.4rem;
@@ -674,6 +676,10 @@ $fb-upload-target-border: 2px dashed #BBB;
                 right: 1rem;
             }
         }
+
+        .name-col {
+            padding-top: 1.8rem;
+        }
     }
 }
 
@@ -701,7 +707,7 @@ $fb-upload-target-border: 2px dashed #BBB;
     overflow: visible;
 
     .progress-container {
-        padding-right: 4rem;
+        padding-right: 3.5rem;
         font-size: 1.2rem;
     }
 
