--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -10,20 +10,19 @@
 			</li>
 		</ul>
 		<div class="file-batch-actions">
-			<button class="btn icon-btn" title="Add New Folder"
+			<button class="btn icon-btn" title="Add New Folder" ng-if="project.userCan.createDocument"
 					ng-disabled="!documentMgr.selectedNode"
 					x-document-mgr-add-folder
 					x-project="project"
 					x-root="documentMgr.rootNode"
 					x-node="documentMgr.selectedNode"><span class="glyphicon glyphicon-folder-close"></span></button>
 
-			<button class="btn icon-btn"
+			<button class="btn icon-btn" title="Upload Files" ng-if="project.userCan.createDocument"
 				x-document-mgr-upload-modal
 				x-project="project"
 				x-root="documentMgr.rootNode"
 				x-node="documentMgr.selectedNode"
-				x-type="'project'"
-				title="Upload Files"><span class="glyphicon glyphicon-open"></span></button>
+				x-type="'project'"><span class="glyphicon glyphicon-open"></span></button>
 
 			<button class="toggle-details-btn btn icon-btn" title="Show Details" 
 					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
