--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1831,38 +1831,15 @@ $header-height-sm: 5.2rem;
 	
 	.navbar-brand {
 		padding: 0;
-		height: $header-height-sm;
-		min-height: $header-height-sm;
 
-		a {
-			margin-top: 0.4rem;
-			margin-left: 1rem;
-			padding: 0.5rem;		
-			display: inline-block;
-			color: #FFF;
+		a {		
 			text-decoration: none;	
 			border: 1px solid transparent;
-
-			&:focus {
-				border: 1px solid $header-focus-border-color;
-			}
-		}
-	
-		.app-brand-img,
-		.app-title {
-			display: inline-block;
-			vertical-align: middle;
 		}
 
-		.app-brand-img {
-			height: 25px;
-		}
-
-		.app-title {
-			padding-top: 0.6rem;
-			margin-left: 1.5rem;
-			font-size: 1.2rem;
-			font-weight: bold;
+		img {
+			margin-top: 4px;
+			height: 42px;
 		}
 	}
 	
@@ -1891,24 +1868,6 @@ $header-height-sm: 5.2rem;
 	}
 }
 
-@media (min-width: 480px ) {
-	.app-header {
-		.navbar-brand {
-			a {
-				margin-top: 0.2rem;
-			}
-
-			.app-brand-img {
-				height: 30px;
-			}
-
-			.app-title {
-				padding-top: 0.4rem;
-			}
-		}
-	}
-}
-
 @media (min-width: 900px) {
 	.app-header {
 		height: $header-height;
@@ -1917,29 +1876,16 @@ $header-height-sm: 5.2rem;
 			height: $header-height;
 			margin: 0;
 		}
+
+		.navbar-brand {
+			img {
+				margin-top: 2px;
+				height: 55px;
+			}
+		}
 		
 		.navbar-nav {
 			margin: 1rem;
-		}
-		
-		.navbar-brand {
-			a {
-				margin-top: 0.4rem;
-			}
-
-			.app-brand-img {
-				height: 35px;
-			}
-
-			.app-title {
-				padding-top: 0.6rem;
-				margin-left: 1.5rem;
-				font-size: 1.4rem;
-				font-weight: bold;
-			}
-		}
-		
-		.navbar-nav {
 			float: right;
 			
 			> li > a,
