--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -4,8 +4,7 @@
 		<div class="navbar-header">
 			<div class="navbar-brand">
 				<a ui-sref="projects" href>
-					<img class="app-brand-img" src="{{logo}}" alt="Government of B.C." title="Government of B.C.">
-					<span class="app-title">EAO Project Information & Collaboration</span>
+					<img class="app-brand-img" src="{{logo}}" alt="EAO Project Information & Collaboration" title="EAO Project Information & Collaboration">
 				</a>
 			</div>
 		</div>
@@ -21,6 +20,7 @@
 
 		\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\\ -->
 		</span>
+
 		<ul class="custom-nav">
 			<li class="custom-nav-item">
 				<a href ui-sref="projects">
@@ -37,41 +37,44 @@
 			</li>
 
 			<li class="custom-nav-item dropdown" ng-if="ENV === 'EAO' && systemMenu.shouldRender(authentication.user)">
-				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="System Configuration">
+				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true"
+					aria-expanded="true" title="System Configuration">
 					<span class="glyphicon glyphicon-cog"></span>
 					<span>SYSTEM</span>
 					<span class="caret"></span>
 				</a>
 				<ul class="dropdown-menu pull-right" aria-labelledby="dropdownSystemMenu">
-					<li ng-repeat="item in systemMenu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
+					<li ng-repeat="item in systemMenu.items | orderBy: 'position'" ng-if="item.shouldRender(authentication.user);" ng-class="{ active: $state.includes(item.state) }"
+						class="{{item.class}}">
 						<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
 					</li>
 					<li ng-if="application.userCan.manageRoles">
 						<a href x-role-users-modal x-context="application">Edit System Roles</a>
 					</li>
 					<li ng-if="application.userCan.managePermissions">
-						<a href x-role-permissions-modal x-context="application" x-object="application" >Edit System Permissions</a>
+						<a href x-role-permissions-modal x-context="application" x-object="application">Edit System Permissions</a>
 					</li>
-        </ul>
+				</ul>
 			</li>
-      <!--
+			<!--
 		  this is meant to be a temporary option, strictly limited to the admin role, apis are locked to admin role.
 		  once project is loaded and running, this option can be removed.
 	    -->
-      <li class="custom-nav-item dropdown" ng-if="ENV === 'EAO' && (authentication.user && authentication.user.roles.indexOf ('admin') !== -1)">
-        <a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" title="Administration">
-          <span class="glyphicon glyphicon-cog"></span>
-          <span>ADMIN</span>
-          <span class="caret"></span>
-        </a>
-        <ul class="dropdown-menu pull-right" aria-labelledby="dropdownSystemMenu">
-          <li>
-            <a href x-modal-project-import x-project="import">Import</a>
-          </li>
-        </ul>
-      </li>
+			<li class="custom-nav-item dropdown" ng-if="ENV === 'EAO' && (authentication.user && authentication.user.roles.indexOf ('admin') !== -1)">
+				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="dropdownSystemMenu" data-toggle="dropdown" aria-haspopup="true"
+					aria-expanded="true" title="Administration">
+					<span class="glyphicon glyphicon-cog"></span>
+					<span>ADMIN</span>
+					<span class="caret"></span>
+				</a>
+				<ul class="dropdown-menu pull-right" aria-labelledby="dropdownSystemMenu">
+					<li>
+						<a href x-modal-project-import x-project="import">Import</a>
+					</li>
+				</ul>
+			</li>
 
-      <li class="custom-nav-item">
+			<li class="custom-nav-item">
 				<a href ui-sref="guidance">
 					<span class="glyphicon glyphicon-question-sign"></span>
 					<span>GUIDANCE</span>
@@ -86,7 +89,8 @@
 			</li>
 
 			<li class="custom-nav-item user-menu dropdown" ng-show="authentication.user">
-				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="userMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+				<a class="dropdown-toggle" href ng-click="$event.preventDefault();" id="userMenu" data-toggle="dropdown" aria-haspopup="true"
+					aria-expanded="true">
 					<span class="glyphicon glyphicon-user"></span>
 					<span>{{ authentication.user.displayName }}</span>
 					<span class="caret"></span>
