--- a/modules/documents/client/views/document-manager.html
+++ b/modules/documents/client/views/document-manager.html
@@ -26,6 +26,16 @@
 
 			<button class="toggle-details-btn btn icon-btn" title="Show Details" 
 					ng-click="documentMgr.infoPanel.toggle()"><span class="glyphicon glyphicon-info-sign"></span></button>
+
+			<button class="btn icon-btn" title="Delete" ng-if="project.userCan.createDocument"
+					ng-disabled="documentMgr.selectedDirs.length === 0 && documentMgr.selectedFiles.length === 0"
+					x-confirm-dialog
+					x-title-text="documentMgr.deleteSelected.titleText"
+					x-ok-text="documentMgr.deleteSelected.okText"
+					x-cancel-text="documentMgr.deleteSelected.cancelText"
+					x-confirm-text="documentMgr.deleteSelected.confirmText"
+					x-confirm-items="documentMgr.deleteSelected.confirmItems"
+					x-on-ok="documentMgr.deleteSelected.ok"><span class="glyphicon glyphicon-trash"></span></button>
 		</div>
 	</div>
 
